add device trust tokens support for login in sessions service
