# services/api-gateway/docs/swagger.json
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userspb.UserSessionActionRequest"
+                            "$ref": "#/definitions/github_com_fedotovmax_microservices-shop_api-gateway_internal_domain.LoginInput"
                         }
                     },
                     {
@@ -38,12 +38,6 @@
                         "description": "Locale",
                         "name": "X-Request-Locale",
                         "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "description": "security code from email when user login from new device or ip address",
-                        "name": "bypass_code",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -101,15 +95,18 @@
                 "summary": "Refresh session",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Locale",
-                        "name": "X-Request-Locale",
-                        "in": "header"
+                        "description": "Refresh session dto",
+                        "name": "dto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/sessionspb.RefreshSessionRequest"
+                        }
                     },
                     {
                         "type": "string",
-                        "description": "Refresh token",
-                        "name": "X-Refresh-Token",
+                        "description": "Locale",
+                        "name": "X-Request-Locale",
                         "in": "header"
                     }
                 ],
@@ -193,9 +190,14 @@
                 }
             }
         },
-        "/customers/users/{id}": {
+        "/customers/users/profile": {
             "get": {
-                "description": "Get user base info by id",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get user base profile",
                 "consumes": [
                     "application/json"
                 ],
@@ -205,15 +207,8 @@
                 "tags": [
                     "customers"
                 ],
-                "summary": "Get user base info by id",
+                "summary": "Get user profile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User id parameter",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Locale",
@@ -234,6 +229,12 @@
                             "$ref": "#/definitions/errdetails.BadRequest"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -249,6 +250,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update user profile",
                 "consumes": [
                     "application/json"
@@ -261,13 +267,6 @@
                 ],
                 "summary": "Update user profile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User id parameter",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Update user profile with body dto",
                         "name": "dto",
@@ -295,6 +294,12 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/errdetails.BadRequest"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/httputils.ErrorResponse"
                         }
                     },
                     "500": {
@@ -358,6 +363,42 @@
                 }
             }
         },
+        "github_com_fedotovmax_microservices-shop_api-gateway_internal_domain.LoginInput": {
+            "type": "object",
+            "required": [
+                "email",
+                "ip",
+                "password",
+                "user_agent"
+            ],
+            "properties": {
+                "bypass_code": {
+                    "type": "string",
+                    "example": "1A2B3C4D5E6F"
+                },
+                "device_trust_token": {
+                    "type": "string",
+                    "example": "skdjfsdfsdifsdfsdf123"
+                },
+                "email": {
+                    "type": "string",
+                    "format": "email",
+                    "example": "makc-dgek@mail.ru"
+                },
+                "ip": {
+                    "type": "string",
+                    "format": "ip4",
+                    "example": "19.56.186.122"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "user_agent": {
+                    "type": "string",
+                    "example": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36"
+                }
+            }
+        },
         "httputils.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -384,6 +425,28 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                }
+            }
+        },
+        "sessionspb.RefreshSessionRequest": {
+            "type": "object",
+            "required": [
+                "ip",
+                "refresh_token",
+                "user_agent"
+            ],
+            "properties": {
+                "ip": {
+                    "type": "string",
+                    "format": "ip4",
+                    "example": "19.56.186.122"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "user_agent": {
+                    "type": "string",
+                    "example": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/143.0.0.0 Safari/537.36"
                 }
             }
         },
@@ -554,23 +617,6 @@
                 }
             }
         },
-        "userspb.UserSessionActionRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "format": "email",
-                    "example": "makc-dgek@mail.ru"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "userspb.UserSessionActionResponse": {
             "type": "object",
             "required": [
@@ -616,9 +662,9 @@
         }
     },
     "securityDefinitions": {
-        "ApplicationsToken": {
+        "BearerAuth": {
             "type": "apiKey",
-            "name": "X-App-Token",
+            "name": "Authorization",
             "in": "header"
         }
     }
