# services/api-gateway/internal/controller/customer_controller/find_user_by_id.go
@@ -1,33 +1,31 @@
 package customercontroller
 
 import (
-	"log/slog"
 	"net/http"
 
 	"github.com/fedotovmax/httputils"
-	"github.com/fedotovmax/i18n"
 	"github.com/fedotovmax/microservices-shop-protos/gen/go/userspb"
+	controllerPkg "github.com/fedotovmax/microservices-shop/api-gateway/internal/controller"
 	"github.com/fedotovmax/microservices-shop/api-gateway/internal/keys"
 	"google.golang.org/grpc/metadata"
 )
 
-// @Summary      Get user base info by id
-// @Description  Get user base info by id
-// @Router       /customers/users/{id} [get]
+// @Summary      Get user profile
+// @Description  Get user base profile
+// @Router       /customers/users/profile [get]
 // @Tags         customers
 // @Accept       json
 // @Produce      json
-// @Param id path string true "User id parameter"
+// @Security BearerAuth
 // @Param X-Request-Locale header string false "Locale"
 // @Success      200  {object}  userspb.User
+// @Failure      401  {object}  httputils.ErrorResponse
 // @Failure      400  {object}  errdetails.BadRequest
 // @Failure      404  {object}  httputils.ErrorResponse
 // @Failure      500  {object}  httputils.ErrorResponse
-func (c *controller) findUserByID(w http.ResponseWriter, r *http.Request) {
+func (c *controller) getMe(w http.ResponseWriter, r *http.Request) {
 
-	const op = "controller.customer.findUserByID"
-
-	l := c.log.With(slog.String("op", op))
+	const op = "controller.customer.getMe"
 
 	locale := r.Header.Get(keys.HeaderLocale)
 
@@ -35,14 +33,10 @@ func (c *controller) findUserByID(w http.ResponseWriter, r *http.Request) {
 		locale = keys.FallbackLocale
 	}
 
-	userId := r.PathValue("id")
+	user, err := controllerPkg.GetLocalSession(r)
 
-	if userId == "" {
-		msg, err := i18n.Local.Get(locale, keys.ValidationEmptyID)
-		if err != nil {
-			l.Error(err.Error())
-		}
-		httputils.WriteJSON(w, http.StatusBadRequest, httputils.NewError(msg))
+	if err != nil {
+		httputils.WriteJSON(w, http.StatusUnauthorized, httputils.NewError(err.Error()))
 		return
 	}
 
@@ -53,7 +47,7 @@ func (c *controller) findUserByID(w http.ResponseWriter, r *http.Request) {
 	ctx := metadata.NewOutgoingContext(r.Context(), md)
 
 	response, err := c.users.FindUserByID(ctx, &userspb.FindUserByIDRequest{
-		Id: userId,
+		Id: user.UID,
 	})
 
 	if err != nil {
